--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <title>MLI</title>
-  <link href="../css/main.css" rel="stylesheet" type="text/css" />
+  <link href="main.css" rel="stylesheet" type="text/css" />
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
   <script
     type="text/javascript">WebFont.load({ google: { families: ["Open Sans:300,300italic,400,400italic,600,600italic,700,700italic,800,800italic", "Merriweather:300,300italic,400,400italic,700,700italic,900,900italic", "Lato:100,100italic,300,300italic,400,400italic,700,700italic,900,900italic", "Lora:regular,italic"] } });</script>
@@ -15,7 +15,7 @@
       <p class="main-subheading">Welcome to our Machine Learning Interface. Start by Uploading .ipynb model source code
         then training data. Continuously upload newly collected data and train your model from this interface!</p>
       <div class="social-link-group">
-        <a href="#" class="social-icon-link w-inline-block"><img
+        <a href="https://github.com/svott03/MLI" class="social-icon-link w-inline-block"><img
             src="https://assets.website-files.com/5e4b19df0b25ed6cd34d846a/5e4b19df0b25ed33f04d84c2_social-33.svg"
             width="25" alt="" /></a>
       </div>
@@ -59,7 +59,7 @@
                 <div class="post-info">File Format</div>
                 <div class="post-info">|</div><a class="post-info when-link">.csv</a>
               </div>
-              <p class="post-summary">Upload csv Data.
+              <p class="post-summary">Upload csv Data. This should only be new data points. Size limit of 1GB. Original Training Data should be uploaded to sql database directly.
               </p><a href="/posts/steamed-siphon-froth-mazagran-cafe-au-lait" class="button-round w-button">Upload
                 Data</a>
             </div>
