Div Fields + Btns

--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -46,11 +46,15 @@
                 <div class="post-info">|</div><a class="post-info when-link">.ipynb</a>
               </div>
               <p class="post-summary">Upload .ipynb source code for working model.
-              </p><a href="/posts/steamed-siphon-froth-mazagran-cafe-au-lait" class="button-round w-button">Upload
-                Model</a>
+              </p><input type="file" class="custom-file-input">
             </div>
           </div>
 
+
+
+
+
+          
           <div role="listitem" class="w-dyn-item">
             <div class="post-wrapper"><a class="blog-title-link w-inline-block">
                 <h1 class="blog-title">Upload Data</h1>
@@ -60,8 +64,9 @@
                 <div class="post-info">|</div><a class="post-info when-link">.csv</a>
               </div>
               <p class="post-summary">Upload csv Data. This should only be new data points. Size limit of 1GB. Original Training Data should be uploaded to sql database directly.
-              </p><a href="/posts/steamed-siphon-froth-mazagran-cafe-au-lait" class="button-round w-button">Upload
-                Data</a>
+              </p>
+
+              <input type="file" class="custom-file-input">
             </div>
           </div>
 
@@ -84,12 +89,11 @@
                 <h1 class="blog-title">Predict</h1>
               </a>
               <div class="post-info-wrapper">
-                <div class="post-info">Output</div>
-                <div class="post-info">|</div><a class="post-info when-link">.predict</a>
+                <div class="post-info">File Format</div>
+                <div class="post-info">|</div><a class="post-info when-link">.csv</a>
               </div>
-              <p class="post-summary">Click Below to upload instance for model to predict.
-              </p><a href="/posts/steamed-siphon-froth-mazagran-cafe-au-lait" class="button-round w-button">Upload
-                Instance</a>
+              <p class="post-summary">Click Below to upload instance for model to predict. Csv File should have 1 row.
+              </p><input type="file" class="custom-file-input">
             </div>
           </div>
 
