--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <title>MLI</title>
-  <link href="main.css" rel="stylesheet" type="text/css" />
+  <link href="templates/main.css" rel="stylesheet" type="text/css" />
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
   <script
     type="text/javascript">WebFont.load({ google: { families: ["Open Sans:300,300italic,400,400italic,600,600italic,700,700italic,800,800italic", "Merriweather:300,300italic,400,400italic,700,700italic,900,900italic", "Lato:100,100italic,300,300italic,400,400italic,700,700italic,900,900italic", "Lora:regular,italic"] } });</script>
