donut colors and train requests

--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -26,15 +26,33 @@
       })
     })
     function train() {
+      //Update donut
+      $("#doughnut").css({"border": "20px solid", "border-color": "#ff6817",
+    "border-radius": "100px",
+    "height": "100px",
+    "width": "100px",
+    "margin-top": "25px"});
       $.ajax({
         type: "GET",
         url: "/train",
         success: function (responseText) {
           console.log(responseText.Output)
+          //Update donut
+          $("#doughnut").css({"border": "20px solid", "border-color": "#00d604",
+    "border-radius": "100px",
+    "height": "100px",
+    "width": "100px",
+    "margin-top": "25px"});
           $("#trainOutput").text(responseText.Output);
         },
         error: function (data, status, errorString) {
           console.log(data, status, errorString);
+          //Update donut
+          $("#doughnut").css({"border": "20px solid", "border-color": "#ff5349",
+    "border-radius": "100px",
+    "height": "100px",
+    "width": "100px",
+    "margin-top": "25px"});
           alert("Error in Training");
         }
       })
@@ -94,7 +112,7 @@
                 <div class="post-info">Status</div>
                 <div class="post-info">|</div><a class="post-info when-link">Training</a>
               </div>
-              <div class="doughnut"></div>
+              <div class="doughnut" id="doughnut"></div>
 
             </div>
           </div>
