--- a/server/templates/main.css
+++ b/server/templates/main.css
@@ -6,7 +6,7 @@
       
   .doughnut { 
     border: 20px solid;
-    border-color: #ff5349;
+    border-color: #b3bcc9;
     border-radius: 100px;
     height:100px;
     width:100px;
